--- a/index-START.html
+++ b/index-START.html
@@ -77,7 +77,7 @@
     
 
     .panel p {
-      text-transform: lowercase;
+      text-transform: uppercase;
       font-family: 'Annie Use Your Telescope', cursive;
       text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 2em;
